[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools"]

[dependency-groups]
dev = [
  "dijkstar",
]

[project]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
]
dynamic = ["version"]
license = "MIT"
name = "advent_of_code"
readme = "README.md"
requires-python = ">=3.14"

[tool.mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true

[tool.ruff]
target-version = "py313"

[tool.ruff.lint]
extend-select = [
  "UP",  # see pyupgrade
  "B",  # see flake8-bugbear
  "A",  # see flake8-builtins
  "C4",  # see flake8-comprehension
  "SIM",  # see flake8-simplify
  "TC",  # see flake8-type-checking
]

[tool.setuptools.packages.find]
where = ["."]
