[metadata]
name = advent-of-code

[options]
packages = find:

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[flake8]
max-line-length = 88
extend-ignore = E203
min_python_version = 3.11
